// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  userId    String   @id @default(cuid())
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  email           String? @unique
  password        String?
  refreshedHash   String?
  intraId         String? @unique
  profileFinished Boolean @default(false)
  online          Boolean @default(false)

  Username      String?        @unique
  firstName     String?
  lastName      String?
  discreption   String         @default("")
  avatar        String?
  tfaEnabled    Boolean        @default(false)
  tfaSecret     String?
  tfaToken      String?        @unique
  left_friends  Friend[]       @relation("from")
  right_friends Friend[]       @relation("to")
  participant1  Match[]        @relation("participant1")
  participant2  Match[]        @relation("participant2")
  owned_rooms   Room[]         @relation("owner")
  roomMember    RoomMember[]
  blocked_by    BlockedUsers[] @relation("blocked_by")
  blocked       BlockedUsers[] @relation("blocked")
  Message       Message[]

  actor    Notification[] @relation("actor")
  receiver Notification[] @relation("receiver") 

  @@map("users")
}

model Friend {
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  id       String  @id
  fromId   String
  toId     String
  accepted Boolean @default(false)
  from     User    @relation("from", fields: [fromId], references: [userId], onDelete: Cascade)
  to       User    @relation("to", fields: [toId], references: [userId], onDelete: Cascade)

  @@unique([fromId, toId], name: "unique_friend")
  @@map("friends")
}

model BlockedUsers {
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  id            String  @id
  Blcoked_by    User    @relation("blocked_by", fields: [blocked_by_id], references: [userId], onDelete: Cascade)
  blocked_by_id String
  Blocked       User    @relation("blocked", fields: [blocked_id], references: [userId], onDelete: Cascade)
  blocked_id    String
  dmRoomId      String?

  @@unique([blocked_by_id, blocked_id], name: "unique_block")
  @@map("blocked_friends")
}

model Match {
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  id             Int     @id @default(autoincrement())
  participant1Id String
  participant2Id String
  winner_id      String?
  score1         Int?
  score2         Int?
  gametype       String?
  participant1   User    @relation("participant1", fields: [participant1Id], references: [userId], onDelete: Cascade)
  participant2   User    @relation("participant2", fields: [participant2Id], references: [userId], onDelete: Cascade)

  @@map("matches")
}

model Message {
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  id       String  @id @default(cuid())
  authorId String
  room     Room    @relation(fields: [roomId], references: [id], onDelete: Cascade)
  author   User    @relation(fields: [authorId], references: [userId], onDelete: Cascade)
  roomId   String
  content  String?

  @@unique([createdAt])
  @@map("messages")
}

model Room {
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  id       String       @id @default(cuid())
  name     String?
  ownerId  String
  type     RoomType     @default(public)
  password String?
  owner    User         @relation("owner", fields: [ownerId], references: [userId], onDelete: Cascade)
  members  RoomMember[]
  messages Message[]

  @@map("rooms")
}

model RoomMember {
  updatedAt DateTime @updatedAt
  createdAt DateTime @default(now())

  id           String    @id @default(cuid())
  userId       String
  roomId       String
  is_admin     Boolean   @default(false)
  is_banned    Boolean   @default(false)
  bannedAt     DateTime?
  is_mueted    Boolean   @default(false)
  mute_expires DateTime?
  user         User      @relation(fields: [userId], references: [userId], onDelete: Cascade)
  room         Room      @relation(fields: [roomId], references: [id], onDelete: Cascade)

  @@unique([userId, roomId], name: "unique_user_room")
  @@map("room_members")
}

model Notification {
  createdAt DateTime @default(now())

  id          String    @id @default(cuid())
  actorId     String
  receiverId  String
  type        NotifType
  entityId    String?
  entity_type String?
  is_read     Boolean   @default(false)

  actor       User      @relation("actor", fields: [actorId], references: [userId], onDelete: Cascade)
  receiver    User      @relation("receiver", fields: [receiverId], references: [userId], onDelete: Cascade)
  @@unique([createdAt])
  @@map("notifications")
}

enum NotifType {
  addFriend
  acceptFriend
  message
}

enum RoomType {
  public
  private
  protected
  dm
}
